Update 01 - Deliberation - Feature extraction.ipynb

--- a/01 - Deliberation - Feature extraction.ipynb
+++ b/01 - Deliberation - Feature extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,12 +62,15 @@
     "from convokit import TextParser\n",
     "from convokit import PolitenessStrategies\n",
     "import spacy\n",
-    "        \n"
+    "import nltk\n",
+    "#nltk.download('averaged_perceptron_tagger')\n",
+    "import sklearn.externals\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +120,7 @@
     "        for harbinger in features[feature]:\n",
     "            count += text.count(harbinger)\n",
     "        return count\n",
-    "\n",
+    "    \n",
     "    df['clean_text'] = df.apply(lambda row: clean_text(row[X_col]), axis=1)\n",
     "    for feature in features:\n",
     "        df[feature] = df.apply(lambda row: get_feature_frequency(row['clean_text'], feature), axis=1)"
@@ -125,10 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def preprocess(text_string):\n",
+    "        \n",
+    "        space_pattern = '\\s+'\n",
+    "        giant_url_regex = ('http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|''[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+')\n",
+    "        mention_regex = '@[\\w\\-]+'\n",
+    "        parsed_text = re.sub(space_pattern, ' ', text_string)\n",
+    "        parsed_text = re.sub(giant_url_regex, '', parsed_text)\n",
+    "        parsed_text = re.sub(mention_regex, '', parsed_text)\n",
+    "    #parsed_text = parsed_text.code(\"utf-8\", errors='ignore')\n",
+    "        return parsed_text\n",
+    "\n",
     "\n",
     "#nlp = en_core_web_sm.load()\n",
     "#spacy.load(\"en_core_web_lg\")\n",
@@ -150,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,12 +606,71 @@
     "            X = vectorizer.fit_transform(corpus)\n",
     "            df = df.join(pd.DataFrame(X.toarray()).add_prefix('tfidf_'))\n",
     "            df.to_csv(os.path.join(MODIFIED_DATA, 'tfidf.csv'))\n",
-    "            return df\n"
+    "            return df\n",
+    "def extract_tfidf_and_pos(df,X_col):\n",
+    "            vectorizer = TfidfVectorizer(    tokenizer=spacy_tokenizer,            preprocessor=preprocess,            ngram_range=(1, 3),            stop_words=STOP_WORDS, #We do better when we keep stopwords\n",
+    "                                         use_idf=True,smooth_idf=False,      norm=None, #Applies l2 norm smoothin\n",
+    "                                         decode_error='replace',            max_features=10000,                         )#    min_df=1,   max_df=0.501    \n",
+    "            tweets = df[X_col]\n",
+    "            tfidf = vectorizer.fit_transform(tweets).toarray()\n",
+    "            print(\"came here\")\n",
+    "            vocab = {v:i for i, v in enumerate(vectorizer.get_feature_names())}\n",
+    "            idf_vals = vectorizer.idf_\n",
+    "            idf_dict = {i:idf_vals[i] for i in vocab.values()} #keys are indices; values are IDF scores\n",
+    "            #Get POS tags for tweets and save as a string\n",
+    "            print(\"came here\")\n",
+    "            tweet_tags = []\n",
+    "            for t in tweets:\n",
+    "                tokenizer = Tokenizer(preserve_case=True)\n",
+    "                tokens = tokenizer.tokenize(preprocess(t))\n",
+    "                tags = nltk.pos_tag(tokens)\n",
+    "                tag_list = [x[1] for x in tags]\n",
+    "                #for i in range(0, len(tokens)):\n",
+    "                tag_str = \" \".join(tag_list)\n",
+    "                tweet_tags.append(tag_str)\n",
+    "            pos_vectorizer = TfidfVectorizer(tokenizer=None,    lowercase=False,    preprocessor=None,    ngram_range=(1, 3),    stop_words=None, #We do better when we keep stopwords    \n",
+    "                                             use_idf=False,    smooth_idf=False,    norm=None, #Applies l2 norm smoothing\n",
+    "                                             decode_error='replace',    max_features=5000      )#  min_df=1,   max_df=0.501,\n",
+    "             #Construct POS TF matrix and get vocab dict\n",
+    "            pos = pos_vectorizer.fit_transform(pd.Series(tweet_tags)).toarray()\n",
+    "            pos_vocab = {v:i for i, v in enumerate(pos_vectorizer.get_feature_names())}    \n",
+    "            M = np.concatenate([tfidf,pos],axis=1)\n",
+    "            #Finally get a list of variable names\n",
+    "            variables = ['']*len(vocab)\n",
+    "            for k,v in vocab.items():\n",
+    "                variables[v] = 'tfidf_'+k\n",
+    "            pos_variables = ['']*len(pos_vocab)\n",
+    "            for k,v in pos_vocab.items():\n",
+    "                pos_variables[v] = 'POS_' + k\n",
+    "\n",
+    "            feature_names = variables+pos_variables\n",
+    "            M_df = pd.DataFrame(M,columns = feature_names)\n",
+    "            df = df.join(M_df)\n",
+    "            \n",
+    "            \n",
+    "            ## save the pickles\n",
+    "            new_vocab = {v:i for i, v in enumerate(variables)}\n",
+    "            new_vectorizer = TfidfVectorizer(    #vectorizer = sklearn.feature_extraction.text.CountVectorizer(\n",
+    "                tokenizer=spacy_tokenizer,    preprocessor=preprocess,    ngram_range=(1, 3),    stop_words=STOP_WORDS, #We do better when we keep stopwords\n",
+    "                use_idf=False,    smooth_idf=False,    norm=None, #Applies l2 norm smoothing\n",
+    "                decode_error='replace',    min_df=1,    max_df=1.0,    vocabulary=new_vocab    )\n",
+    "            joblib.dump(vectorizer, 'final_tfidf_vectorizer.pkl')\n",
+    "            #Results are the same if use IDF but the problem is that IDF will be different if we use different data. Instead we have to use the original IDF scores and multiply them by the new matrix.\n",
+    "            joblib.dump(idf_vals, 'final_idf.pkl') \n",
+    "            \n",
+    "            #This is simpler as we do not need to worry about IDF but it will be slower as we have to compute the POS tags for the new data. Here we can simply use the old POS tags.\n",
+    "            new_pos = {v:i for i, v in enumerate(pos_variables)}\n",
+    "            new_pos_vectorizer = TfidfVectorizer(    tokenizer=None,    lowercase=False,    preprocessor=None,    ngram_range=(1, 3),    stop_words=None, #We do better when we keep stopwords\n",
+    "                                                   use_idf=False,    smooth_idf=False,    norm=None, #Applies l2 norm smoothing\n",
+    "                                                 decode_error='replace',    min_df=1,    max_df=1.0,    vocabulary=new_pos    )\n",
+    "            joblib.dump(new_pos_vectorizer, 'final_pos_vectorizer.pkl') \n",
+    "            return df\n",
+    "        #print(tokens[i],tag_list[i])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +686,7 @@
     "    df = emolize_messages( filename,1,0,\"nrc\")\n",
     "#    extract_harbingers(df, X_col)\n",
     "#    extract_politeness_feats(df, X_col)\n",
-    "    df = extract_tfidf(df,X_col)\n",
+    "    df = extract_tfidf_and_pos(df,X_col)\n",
     "    timestr = time.strftime(\"%Y%m%d-%H%M\")\n",
     "    #print timestr\n",
     "    df.to_csv(filename+\"_allfeats_\"+timestr+\".csv\")"
@@ -621,14 +694,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -643,7 +716,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -658,7 +731,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -673,7 +746,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -688,7 +761,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -703,7 +776,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -718,7 +791,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -733,7 +806,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -748,7 +821,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -763,7 +836,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -778,7 +851,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -793,7 +866,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-34-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "<ipython-input-128-d8128955d110>:33: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df = df.append(lexicon)\n"
      ]
     },
@@ -802,7 +875,9 @@
      "output_type": "stream",
      "text": [
       "{'text': 'all of these dangerous cases exist, only because guns exist in the first place. remove them all and violence will drop dramatically.', 'anger': 0.04, 'anticipation': 0.0, 'disgust': 0.0, 'fear': 0.12, 'joy': 0.0, 'negative': 0.12, 'positive': 0.0, 'sadness': 0.08, 'surprise': 0.0, 'trust': 0.0}\n",
-      "Writing emolized messages to csv...\n"
+      "Writing emolized messages to csv...\n",
+      "came here\n",
+      "came here\n"
      ]
     },
     {
@@ -810,7 +885,9 @@
      "output_type": "stream",
      "text": [
       "/home/kokil/.local/lib/python3.8/site-packages/sklearn/feature_extraction/text.py:396: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens [\"'\", 'd', 'll', 'm', 've', '‘', '’'] not in stop_words.\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "/home/kokil/.local/lib/python3.8/site-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
      ]
     }
    ],
@@ -823,10 +900,16 @@
     "MODIFIED_DATA = os.path.join(OUTPUT_DIR, 'modified_data')\n",
     "os.makedirs(MODIFIED_DATA, exist_ok=True)\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "\n",
     "extract_feats(filename,\"text\")\n",
     "##        \"C:/Users/User/Dropbox/data/msgs_jun23.csv\" --predict 1 0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
